# Hawk

./: .gitignore  CMakeLists.txt  README.md
comp/bit_mask/: CMakeLists.txt  c_bit_mask.c  cpp_bitset.cpp  hawk_bit_mask.cpp
include/hawk/: types.hpp
include/hawk/kernel/: bit_mask.hpp  cpu.hpp  kernel.hpp  memory.hpp  panic.hpp  queue.hpp  register.hpp  scheduler.hpp  task.hpp
include/hawk/kernel/containers/: queue.hpp  vector.hpp
include/hawk/kernel/memory/: unique_ptr.hpp
misc/: make_boot_img.bash
source/hawk/boot/: boot_loader.cpp
source/hawk/kernel/: kernel.cpp  task.cpp
